Bug #115764.  sporadic Trunk crashes in [@ nsWindow::OnDragMotionSignal]  w/drag'n'drop.  Use cool and smooth native gtk timers instead of cranky fake-o XP timers that don't have a deterministic order in the mainloop.  r=bryner, sr=shaver (2!)